```mermaid
classDiagram

%% =======================
%% Root / entrypoints
%% =======================

class Relay {
  +server: Server
  +dispatcher: Dispatcher
  +run()
  +start_handler(connection_handler: ConnectionHandler)
}

class APP {
  +client: APPClient
  +tui_adapter: TUI_Adapter
  +run()
}

Relay *-- Server : owns
Relay *-- Dispatcher : owns
Server o-- ConnectionHandler : creates per connection

%% Relay wires callback (not ownership transfer)
Relay ..> ConnectionHandler : factory arg
Relay ..> ClientHandler : creates per connection

APP *-- APPClient : owns
APP *-- TUI_Adapter : owns
APPClient ..> TUI_Adapter : callbacks target

%% =======================
%% src.relay
%% =======================

namespace src.relay {
  class Server {
    +active_connections: set
    +on_connection_callback: Callable
    +handler_factory(ws)
    +run()
    +close_active_connections()
  }

  class ConnectionHandler {
    +ws
    +package_factory: PackageFactory
    +run()
    +send_message(msg: Message)
    +send_tsr(tsr: TimestampResponse)
    +send_sys_message(sys_msg: SystemMessage)
  }

  class Channel {
    +members_funcs: dict
    +send_message(msg: Message, sender_func)
    +subscribe(username: str, send_func)
    +unsubscribe(username: str)
  }

  class Dispatcher {
    +chanels: dict
    +users: dict
    +send_message(msg: Message, sender_func)
    +subscribe(channel_name: str, username: str, send_func)
    +unsubscribe(channel_name: str, username: str)
    +create_channel(channel_name: str, username: str, send_func)
    +call(msg: Message)
  }

  class PackageFactory {
    <<abstract>>
    #_classes: dict
    #_handlers: dict
    +get_handler_and_instance(json_str)
    +process_json(json_str)
    +async_process_json(json_str)
  }

  class RelayPackageFactory {
    #_handlers: dict
  }

  class ClientHandler {
    +username: str
    +dispatcher: Dispatcher
    +connection_handler: ConnectionHandler
    +send_message_to_client(msg: Message)
    +send_tsr_to_client(tsr: TimestampResponse)
    +bot: RelayBot
    +run()
    +on_start()
    +on_msg(msg: Message)
    +on_sys_msg(sys_msg: SystemMessage)
    +send_text_to_client(text: str)
    +set_username(name: str)
  }

  class RelayBot {
  }

  Dispatcher *-- Channel : rooms
  ClientHandler o-- Dispatcher : shared relay dispatcher
  ClientHandler *-- ConnectionHandler : per-connection session
  ClientHandler *-- RelayBot : owns

  RelayPackageFactory <|-- PackageFactory
  RelayPackageFactory ..> ClientHandler : handlers call back

  RelayBot <|-- Bot
  %% RelayBot defines command handlers closing over ClientHandler/Dispatcher
  RelayBot ..> ClientHandler : uses (commands)
  RelayBot ..> Dispatcher : uses (create/join)
}

%% =======================
%% src.client
%% =======================

namespace src.client {
  class NetClient {
    +package_factory: PackageFactory
    +ws
    +connect(ip: str, port: str): bool
    +run(): Message
    +send_message(msg: Message)
    +send_sys_message(sys_msg: SystemMessage)
    +disconnect()
  }

  class Client {
    +username: str
    +chats: dict
    +on_message_callback
    +on_chat_added_callback
    +on_chat_removed_callback
    +net_client: NetClient
    +connection_thread
    +connect_to_relay(ip: str, port: str): bool
    +run_net_client()
    +start_connection_thread(ip: str, port: str): bool
    +disconnect()
    +add_chat(chat: Chat)
    +create_chat(chat_name: str)
    +remove_chat(chat_name: str)
    +on_msg(msg: Message)
    +on_ts_response(tsr: TimestampResponse)
    +on_sys_msg(sys_msg: SystemMessage)
    +send_user_text(chat: str, text: str)
    +set_username(name: str)
    +send_username()
  }

  Client *-- NetClient : owns
  NetClient o-- PackageFactory : configured by
}

%% =======================
%% src.app
%% =======================

namespace src.app {
  class APPClient {
    +chat_bot: APPClientChatBot
    +send_user_text(chat: str, text: str)
    +start_connection_thread(ip: str, port: str): bool
    +connect_to_relay(ip: str, port: str): bool
    +run_net_client()
  }

  class APPClientChatBot {
  }

  class APPClientPackageFactory {
    #_handlers: dict
  }

  class TUI_Adapter {
    +client: Client
    +input_buffer: str
    +active_chat: str
    +active_chat_idx: int
    +is_stoped: bool
    +run()
    +iter()
    +backspace()
    +enter()
    +step_chat(step: int)
    +handle_chat_removed()
    +fresah_draw()
    +create_window(h: int, w: int, y: int, x: int)
    +resize_windows()
    +update_messages()
    +update_input()
    +update_bar()
  }

  APPClient <|-- Client
  APPClient *-- APPClientChatBot : owns
  APPClientPackageFactory <|-- PackageFactory

  APPClientChatBot <|-- ChatBot
  TUI_Adapter o-- Client : UI over client
}

%% =======================
%% src.chat
%% =======================

namespace src.chat {
  class Chat {
    <<abstract>>
    +name: str
    +messages: list
    +add_message(msg: Message)
    +send_message(msg: Message)
  }

  class ChatBot {
    +bot: Bot
    +add_commands(commands: list)
    +send_message(msg: Message)
  }

  class RemoteChat {
    +net_client: NetClient
    +messages_wait_for_sync: dict
    +messages_sync_count: int
    +send_message(msg: Message)
    +on_tsr(tsr: TimestampResponse)
  }

  ChatBot <|-- Chat
  RemoteChat <|-- Chat

  ChatBot *-- Bot : owns
  RemoteChat o-- NetClient : uses network
}

%% =======================
%% src.bot & command routing
%% =======================

namespace src {
  class Bot {
    +chat_name: str
    +bot_name: str
    +command_router: CommandRouter
    +send_message
    +add_command(command: str, function, args: dict)
    +add_commands(commands: list)
    +send_text(text: str)
    +async_send_text(text: str)
    +on_text(text: str)
    +async_on_text(text: str)
  }

  class CommandRouter {
    +commands_dict: dict
    +add_command(command: str, function, args: dict)
    +route(text: str): bool
    +async_route(text: str): bool
    +get_func_kwargs(text: str)
    +parse_args(words: list, args: dict)
  }

  class FuncArgsPair {
    <<dataclass>>
    +function
    +kwargs: dict
  }

  Bot *-- CommandRouter : owns
  CommandRouter *-- FuncArgsPair : stores
}

%% =======================
%% src.package
%% =======================

namespace src.package {
  class Package {
    <<abstract>>
    +type: str
    +to_json(): str
    +from_json(json_str): Package
  }

  class Message {
    +chat: str
    +sender: str
    +text: str
    +message_id
    +timestamp
    +type: str
    +set_timestamp_now(): Message
  }

  class TimestampResponse {
    +chat: str
    +message_id: int
    +timestamp
    +type: str
    +from_message(msg: Message): TimestampResponse
  }

  class SystemMessage {
    +msg_type: str
    +body: str
    +type: str
  }

  Message <|-- Package
  TimestampResponse <|-- Package
  SystemMessage <|-- Package
}

%% =======================
%% Cross-namespace dependencies (protocol/data flow)
%% =======================

%% PackageFactory maps type->Package and dispatches to handlers
src.relay.PackageFactory ..> src.package.Package : creates from json
src.relay.PackageFactory ..> src.package.Message
src.relay.PackageFactory ..> src.package.TimestampResponse
src.relay.PackageFactory ..> src.package.SystemMessage

%% NetClient receives json and feeds factory
src.client.NetClient ..> src.relay.PackageFactory : process_json()

%% ConnectionHandler receives json and feeds factory (async)
src.relay.ConnectionHandler ..> src.relay.PackageFactory : async_process_json()

%% Client reacts to incoming packages via factories' handlers
src.app.APPClientPackageFactory ..> src.client.Client : handlers target
src.relay.RelayPackageFactory ..> src.relay.ClientHandler : handlers target

%% Chat / relay use shared Message DTO
src.chat.Chat ..> src.package.Message
src.relay.Dispatcher ..> src.package.Message
src.relay.Channel ..> src.package.Message
src.client.Client ..> src.package.Message
```
